--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /*############   Responsively ###################*/
 .navhaut {
-    background-color:rgba(0,0,0,0.8);
+    background-color:black;
     /*overflow: hidden;*/
     display:flex;
     font-family: "Century Gothic", helvetica, arial, sans-serif;
@@ -41,6 +41,186 @@ Disparition des li*/
     * {
         margin: 0;
     }
+
+    a {
+      text-decoration: none;
+    }
+
+    .fond{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      
+    }
+
+    .logo{
+      width: 40%;
+      margin-top: 15px;
+    }
+
+    h1{
+      color: white;
+      text-align: center;
+      font-size: 20px;
+      width: 60%;
+    }
+
+
+    /* section telephone */
+    .telephone {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: black;
+      padding-bottom: 20px;
+    }
+
+    h2{
+      width: 100%;
+      text-indent: 10px;
+      font-size: 20px;
+      height: 35px;
+      color: white;
+      background-color: black;
+      padding-top: 10px;
+    }
+
+    .modeles{
+      display: flex;
+      align-items: center;
+      width: 90%;
+      height: 260px;
+      display: flex;
+      flex-direction: column;
+      border-radius: 0px 40px 40px 40px;
+      margin-top: 10px;
+      background-color: white;
+    }
+
+    .mobile {
+      width: 22%;
+    }
+
+    h3{
+      width: 100%;
+      text-indent: 5px;
+      font-size: 15px;
+      height: 40px;
+      margin-top: 6px;
+    }
+
+    .info {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      margin-top: 30px;
+    }
+
+    .marque {
+      font-size: 16px;
+      color: rgb(62, 62, 247);
+    }
+
+    .modele {
+      font-size: 12px;
+    }
+
+    .prix {
+      font-size: 22px;
+      color: rgb(62, 62, 247);
+    }
+    
+    .mobilee{
+      width: 31%;
+    }
+
+    /* section telephone */
+
+    /* section offre */
+
+    .section2 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #ffd200;
+    }
+
+    .image {
+      width: 27%;
+      margin-top: 7px;
+    }
+
+    h4 {
+      width: 100%;
+      text-align: center;
+      margin-top: 6px;
+      font-size: 15px;
+    }
+
+    .description {
+      width: 100%;
+      text-align: center;
+      margin-top: 10px;
+      font-size: 12px;
+    }
+
+    .bouton {
+      border: 1px black solid;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      padding: 10px 1px;
+      width: 50%;
+      font-size: 11px;
+      font-weight: 600;
+      text-align: center;
+      color: white;
+      background-color: black;
+    }
+
+    .blue {
+      background-color: #44b3e8;
+    }
+
+    /* section offres */
+
+    /* section footer */
+
+    .section3 {
+      border: 1px black solid;
+      background-color: black;
+    }
+
+    .titre {
+      border: 1px black solid;
+      margin-bottom: 15px;
+      background-color: black;
+
+    }
+
+    h5 {
+      border: 1px black solid;
+      text-indent: 2px;
+      height: 25px;
+      margin-top: 10px;
+      font-size: 16px;
+      color: white;
+    }
+
+    .descript {
+      border: 1px black solid;
+      margin-top: 5px;
+      font-size: 12px;
+      margin-bottom: 15px;
+      color: white;
+    }
+
+    .btn {
+      color: rgb(155, 155, 239);
+    }
+    /* section footer */
+    
 
 	.navhaut li{
 			display:none;
