--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@
 
 /*Apparition du hamburger sur viewport <600px
 Disparition des li*/
-@media screen and (max-width: 500px) 
+@media screen and (max-width: 499px) 
 {
     * {
         margin: 0;
@@ -46,13 +46,14 @@ Disparition des li*/
       text-decoration: none;
     }
 
+    /* section header mobile */
     .fond{
       display: flex;
       flex-direction: column;
       align-items: center;
       background-repeat: no-repeat;
       width: 100%;
-      
+      height: 200px;
     }
 
     .logo{
@@ -64,11 +65,12 @@ Disparition des li*/
       color: white;
       text-align: center;
       font-size: 20px;
+      font-weight: 500;
       width: 60%;
     }
+    /* section header */
 
-
-    /* section telephone */
+    /* section telephone mobile */
     .telephone {
       display: flex;
       flex-direction: column;
@@ -138,7 +140,7 @@ Disparition des li*/
 
     /* section telephone */
 
-    /* section offre */
+    /* section offre mobile */
 
     .section2 {
       display: flex;
@@ -185,7 +187,7 @@ Disparition des li*/
 
     /* section offres */
 
-    /* section footer */
+    /* section footer mobile */
 
     .section3 {
       border: 1px black solid;
@@ -267,3 +269,204 @@ Disparition des li*/
   }
 }
 */
+
+@media screen and (min-width: 500px)
+{
+  * {
+    margin: 0;
+  }
+
+  a {
+    text-decoration: none;
+  }
+  
+  /* section header desktop */
+
+  .fond{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-repeat: no-repeat;
+    height: 250px;
+  }
+
+  .logo {
+    width: 18%;
+    margin-top: 15px;
+  }
+
+  h1 {
+    color: white;
+    font-size: 22px;
+    margin-top: 10px;
+    font-weight: 500;
+  }
+
+  /* section header */
+
+  /* section telephone */
+
+  .telephone {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    padding-bottom: 20px;
+  }
+
+  .desktop {
+    display: flex;
+    justify-content: space-around;
+    height: 300px;
+  }
+
+  h2{
+    width: 100%;
+    text-indent: 10px;
+    font-size: 20px;
+    height: 35px;
+    color: white;
+    background-color: black;
+    padding-top: 10px;
+  }
+
+  .modeles{
+    display: flex;
+    align-items: center;
+    width: 31%;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0px 40px 40px 40px;
+    margin-top: 10px;
+    background-color: white;
+  }
+
+  .mobile {
+    width: 22%;
+  }
+
+  h3{
+    width: 100%;
+    text-indent: 5px;
+    font-size: 15px;
+    height: 40px;
+    margin-top: 6px;
+  }
+
+  .info {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+  }
+
+  .marque {
+    font-size: 16px;
+    color: rgb(62, 62, 247);
+  }
+
+  .modele {
+    font-size: 12px;
+  }
+
+  .prix {
+    font-size: 22px;
+    color: rgb(62, 62, 247);
+  }
+  
+  .mobilee{
+    width: 31%;
+  }
+
+  /* section telephone */
+
+  /* section offre desktop */
+
+
+  .offres {
+    display: flex;
+    width: 100%;
+  }
+  .section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffd200;
+    width: 50%;
+  }
+
+  .image {
+    width: 27%;
+    margin-top: 7px;
+  }
+
+  h4 {
+    width: 100%;
+    text-align: center;
+    margin-top: 6px;
+    font-size: 15px;
+  }
+
+  .description {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 12px;
+  }
+
+  .bouton {
+    border: 1px black solid;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 1px;
+    width: 50%;
+    font-size: 11px;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+    background-color: black;
+  }
+
+  .blue {
+    background-color: #44b3e8;
+  }
+
+  /* section offres */
+
+  /* section footer mobile */
+
+  .section3 {
+    border: 1px black solid;
+    background-color: black;
+    display: flex;
+  }
+
+  .titre {
+    border: 1px black solid;
+    margin-bottom: 15px;
+    background-color: black;
+
+  }
+
+  h5 {
+    border: 1px black solid;
+    text-indent: 2px;
+    height: 25px;
+    margin-top: 10px;
+    font-size: 16px;
+    color: white;
+  }
+
+  .descript {
+    border: 1px black solid;
+    margin-top: 5px;
+    font-size: 12px;
+    margin-bottom: 15px;
+    color: white;
+  }
+
+  .btn {
+    color: rgb(155, 155, 239);
+  }
+  /* section footer */
+}
