ajout police poppins

--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ Disparition des li*/
 {
     * {
         margin: 0;
+        font-family: poppins;
     }
 
     a {
@@ -274,6 +275,7 @@ Disparition des li*/
 {
   * {
     margin: 0;
+    font-family: poppins;
   }
 
   a {
